--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,5 +27,9 @@
         android:id="@+id/infoFragment"
         android:name="sanzlimited.com.newsapiapp.InfoFragment"
         android:label="fragment_info"
-        tools:layout="@layout/fragment_info" />
+        tools:layout="@layout/fragment_info" >
+        <argument
+            android:name="selected_article"
+            app:argType="sanzlimited.com.newsapiapp.data.model.Article" />
+    </fragment>
 </navigation>
